2006-10-03  Matthew Allum  <mallum@openedhand.com>

	* configure.ac:
	* clutter/Makefile.am:
	* clutter/clutter-actor.c:
	* clutter/clutter-label.c:
	* clutter/clutter-label.h:
	* clutter/pango/Makefile.am:
	* clutter/pango/pangoclutter-font.c:
	* clutter/pango/pangoclutter-fontmap.c:
	* clutter/pango/pangoclutter-private.h:
	* clutter/pango/pangoclutter-render.c:
	* clutter/pango/pangoclutter.h:
	Add initial rough new pango renderer and clutter-label. 

	* examples/super-oh.c:
	* examples/test.c:
	Minor fixups

2006-09-20  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-actor.c: (clutter_actor_paint):
	* clutter/clutter-clone-texture.c: (clutter_clone_texture_paint):
	* clutter/clutter-group.c: (clutter_group_paint):
	* clutter/clutter-rectangle.c: (clutter_rectangle_paint):
	* clutter/clutter-texture.c: (clutter_texture_paint):
	Fix for #156. 
	clutter_actor_paint() now translates to actor position as
	to not fix scaled groups positioning. Sub classes now paint
	at 0,0.  

2006-09-19  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-actor.c: (redraw_update_idle),
	(clutter_actor_queue_redraw):
	* clutter/clutter-main.c: (clutter_redraw):
	Remove now uneeded locks 
	( new gst and texture code makes redundant )

	* clutter/clutter-texture.c:
	* clutter/clutter-texture.h:
	Redo clutter texture as to not keep a reference
	to underlying texture.

2006-09-15  Matthew Allum  <mallum@openedhand.com>

	More fixes from Bastien Nocera (#155):

	* clutter/clutter-main.c: (clutter_init):
	* clutter/clutter-main.h:
	Add an enum for clutter init to return an error code. 
	* configure.ac:
	Dont check for XInitThreads, there is no need, its part of xlib.

2006-09-14  Matthew Allum  <mallum@openedhand.com>

	Various fixes from Bastien Nocera:

	* clutter/clutter-event.h:
	* clutter/clutter-stage.c: (clutter_stage_unrealize),
	(clutter_stage_realize), (clutter_stage_request_coords),
	(clutter_stage_dispose), (clutter_stage_init):
	* clutter/clutter-stage.h: