@@ -33,31 +33,26 @@
 
 #include "clutter-actor.h"
 #include "clutter-behaviour.h"
-#include "clutter-marshal.h"
 
 G_DEFINE_TYPE (ClutterBehaviour, clutter_behaviour, G_TYPE_OBJECT);
 
 struct ClutterBehaviourPrivate
 {
-  GObject    *object;
-  GParamSpec *param_spec;
-  guint       notify_id;
-  GSList     *actors;
+  ClutterAlpha *alpha;
+  guint         notify_id;
+  GSList       *actors;
 };
 
 enum
 {
   PROP_0,
-  PROP_OBJECT,
-  PROP_PROPERTY
+  PROP_ALPHA
 };
 
 enum {
-  SIGNAL_PROPERTY_CHANGE,
   SIGNAL_LAST
 };
 
-static guint signals[SIGNAL_LAST];
 
 #define CLUTTER_BEHAVIOUR_GET_PRIVATE(obj)         \
               (G_TYPE_INSTANCE_GET_PRIVATE ((obj), \
@@ -73,7 +68,7 @@ _clutter_behaviour_dispose (GObject *object)
     {
       /* FIXME: remove all actors */
 
-      clutter_behaviour_set_object (self, NULL);
+      clutter_behaviour_set_alpha (self, NULL);
     }
 
   G_OBJECT_CLASS (clutter_behaviour_parent_class)->dispose (object);
@@ -105,11 +100,8 @@ _clutter_behaviour_set_property (GObject      *object,
 
   switch (prop_id) 
     {
-    case PROP_OBJECT:
-      clutter_behaviour_set_object (behaviour, g_value_get_object (value));
-      break;
-    case PROP_PROPERTY:
-      clutter_behaviour_set_property (behaviour, g_value_get_string (value));
+    case PROP_ALPHA:
+      clutter_behaviour_set_alpha (behaviour, g_value_get_object (value));
       break;
     default:
       G_OBJECT_WARN_INVALID_PROPERTY_ID (object, prop_id, pspec);
@@ -131,11 +123,8 @@ _clutter_behaviour_get_property (GObject    *object,
 
   switch (prop_id) 
     {
-    case PROP_OBJECT:
-      g_value_set_object (value, priv->object);
-      break;
-    case PROP_PROPERTY:
-      g_value_set_string (value, priv->param_spec->name);
+    case PROP_ALPHA:
+      g_value_set_object (value, priv->alpha);
       break;
     default:
       G_OBJECT_WARN_INVALID_PROPERTY_ID (object, prop_id, pspec);
@@ -157,30 +146,12 @@ clutter_behaviour_class_init (ClutterBehaviourClass *klass)
   object_class->get_property = _clutter_behaviour_get_property;
 
   g_object_class_install_property
-    (object_class, PROP_OBJECT,
-     g_param_spec_object ("object",
-			  "Object",
-			  "Object whose property to monitor",
-			  G_TYPE_OBJECT,
+    (object_class, PROP_ALPHA,
+     g_param_spec_object ("alpha",
+			  "Alpha",
+			  "Alpha Object to drive the behaviour",
+			  CLUTTER_TYPE_ALPHA,
 			  G_PARAM_CONSTRUCT | G_PARAM_READWRITE));
-
-  g_object_class_install_property
-    (object_class, PROP_PROPERTY,
-     g_param_spec_string ("property",
-			  "Property",
-			  "Property to monitor",
-                          NULL,
-			  G_PARAM_CONSTRUCT | G_PARAM_READWRITE));
-
-  signals[SIGNAL_PROPERTY_CHANGE] =
-     g_signal_new ("property-change",
-		  G_TYPE_FROM_CLASS (object_class),
-		  G_SIGNAL_RUN_LAST,
-		  G_STRUCT_OFFSET (ClutterBehaviourClass, property_change),
-		  NULL, NULL,
-		  clutter_marshal_VOID__OBJECT_POINTER,
-		  G_TYPE_NONE, 
-		  2, G_TYPE_OBJECT, G_TYPE_POINTER);
 
   g_type_class_add_private (object_class, sizeof (ClutterBehaviourPrivate));
 }
@@ -246,54 +217,10 @@ clutter_behaviour_actors_foreach (ClutterBehaviour *behave,
   g_slist_foreach (behave->priv->actors, func, userdata);
 }
 
-GObject*
-clutter_behaviour_get_object (ClutterBehaviour *behave)
+ClutterAlpha*
+clutter_behaviour_get_alpha (ClutterBehaviour *behave)
 {
-  return behave->priv->object;
-}
-
-void
-clutter_behaviour_set_object (ClutterBehaviour *behave, 
-                              GObject          *object)
-{
-  ClutterBehaviourPrivate *priv;
-  const char *property;
-
-  priv = CLUTTER_BEHAVIOUR_GET_PRIVATE(behave);
-
-  if (priv->object)
-    {
-      property = clutter_behaviour_get_property (behave);
-      clutter_behaviour_set_property (behave, NULL);
-
-      g_object_unref(priv->object);
-      priv->object = NULL;
-    }
-  else
-    property = NULL;
-
-  if (object)
-    {
-      priv->object = g_object_ref(object);
-
-      if (property)
-        clutter_behaviour_set_property (behave, property);
-    }
-}
-
-const char *
-clutter_behaviour_get_property (ClutterBehaviour *behave)
-{
-  if (behave->priv->param_spec)
-    return behave->priv->param_spec->name;
-  else
-    return NULL;
-}
-
-GParamSpec *
-clutter_behaviour_get_param_spec (ClutterBehaviour *behave)
-{
-  return behave->priv->param_spec;
+  return behave->priv->alpha;
 }
 
 static void
@@ -301,47 +228,39 @@ notify_cb (GObject          *object,
            GParamSpec       *param_spec,
            ClutterBehaviour *behave)
 {
-        g_signal_emit (behave,
-                       signals[SIGNAL_PROPERTY_CHANGE],
-                       0,
-                       object,
-                       param_spec);
+  ClutterBehaviourClass *class;
+
+  class = CLUTTER_BEHAVIOUR_GET_CLASS(behave);
+
+  if (class->alpha_notify)
+    class->alpha_notify (behave);
 }
 
 void
-clutter_behaviour_set_property (ClutterBehaviour *behave,
-                                const char       *property)
+clutter_behaviour_set_alpha (ClutterBehaviour *behave,
+			     ClutterAlpha     *alpha)
 {
-  g_return_if_fail (behave->priv->object);
-
   if (behave->priv->notify_id)
     {
-      g_signal_handler_disconnect (behave->priv->object,
+      g_signal_handler_disconnect (behave->priv->alpha,
                                    behave->priv->notify_id);
       behave->priv->notify_id = 0;
     }
 
-  behave->priv->param_spec = NULL;
-
-  if (property)
+  if (behave->priv->alpha)
     {
-      guint signal_id;
-      GClosure *closure;
+      g_object_unref (behave->priv->alpha);
+      behave->priv->alpha = NULL;
+    }
 
-      behave->priv->param_spec =
-        g_object_class_find_property (G_OBJECT_GET_CLASS (behave->priv->object),
-                                      property);
-      g_return_if_fail (behave->priv->param_spec);
+  if (alpha)
+    {
+      behave->priv->alpha = alpha;
+      g_object_ref (behave->priv->alpha);
 
-      signal_id = g_signal_lookup ("notify",
-                                   G_OBJECT_TYPE (behave->priv->object));
-      closure = g_cclosure_new ((GCallback) notify_cb, behave, NULL);
-
-      behave->priv->notify_id =
-        g_signal_connect_closure_by_id (behave->priv->object,
-                                        signal_id,
-                                        g_quark_from_string (property),
-                                        closure,
-                                        FALSE);
+      behave->priv->notify_id = g_signal_connect (behave->priv->alpha, 
+						  "notify::alpha",
+						  G_CALLBACK(notify_cb),
+						  behave);
     }
 }
