@@ -10,6 +10,8 @@ main (int argc, char *argv[])
   ClutterColor      stage_color = { 0xcc, 0xcc, 0xcc, 0xff };
   GdkPixbuf        *pixbuf;
 
+  ClutterKnot       knots[] = {{ 100, 100 }, { 100, 200 }, { 200, 200 },
+                               { 200, 100 }, {100, 100 }};
 
   clutter_init (&argc, &argv);
 
@@ -29,19 +31,23 @@ main (int argc, char *argv[])
   clutter_group_add (CLUTTER_GROUP (stage), hand);
 
   /* Make a timeline */
-  timeline = clutter_timeline_new (100, 30); /* num frames, fps */
+  timeline = clutter_timeline_new (100, 60); /* num frames, fps */
   g_object_set(timeline, "loop", TRUE, 0);  
 
   /* Set an alpha func to power behaviour - ramp is constant rise/fall */
   alpha = clutter_alpha_new (timeline, CLUTTER_ALPHA_RAMP);
 
-  /* Create a behaviour for that time line */
-  behave = clutter_behaviour_opacity_new_from_alpha (alpha, 0X33, 0xff); 
+  /* Create a behaviour for that alpha */
+  behave = clutter_behaviour_opacity_new (alpha, 0X33, 0xff); 
 
   /* Apply it to our actor */
   clutter_behaviour_apply (behave, hand);
 
-  /* start the timeline */
+  /* Make a path behaviour and apply that too */
+  behave = clutter_behaviour_path_new (alpha, knots, 5); 
+  clutter_behaviour_apply (behave, hand);
+
+  /* start the timeline and thus the animations */
   clutter_timeline_start (timeline);
 
   clutter_group_show_all (CLUTTER_GROUP (stage));
